REGRESSION(r266681) [GTK] constexpr build failure in LTS/Debian with GCC 8 https://bugs.webkit.org/show_bug.cgi?id=216280

Patch by Lauro Moura <lmoura@igalia.com> on 2020-09-08
Reviewed by Darin Adler and Alex Christensen.

* platform/text/TextCodecSingleByte.cpp:
(WebCore::tableForDecoding):



Canonical link: https://commits.webkit.org/229114@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266749 268f45cc-cd09-0410-ab3c-d52691b4dbfc